# zr

./: Cargo.toml  LICENSE  README.md  flake.nix
completions/: _zr  zr.bash  zr.fish
src/: db.rs  main.rs
